# openai-streamlit-data-analysis-gpt

./: 1_💬_DataGPT.py  Makefile  README.md  image.txt  pyproject.toml  💬_DataGPT.py
data_analysis_llm/: __init__.py  dataset.py  features.py  plots.py
data_analysis_llm/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
pages/: 2_📈_Interactive_Visualization_Tool.py  3_📸_Convert_Image_To_Ascii.py  4_🎬_Convert_GIF_To_Ascii.py  📈_Interactive_Visualization_Tool.py  📸_Convert_Image_To_Ascii.py
src/: utils.py
