[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_analysis_llm"
version = "0.0.1"
description = "a llm that allow user to upload dataset, ask question, generate figures, and interact with dataset visualization"
authors = [
  { name = "dylan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["data_analysis_llm"]
force_sort_within_sections = true
